--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="214dp"
         android:layout_height="21dp"
         android:layout_marginTop="16dp"
-        android:text="0.5          1.0           1.5            2.0"
+        android:text="@string/progression_bar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.172"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,7 +22,7 @@
         android:layout_width="237dp"
         android:layout_height="103dp"
         android:onClick="startMonitoring"
-        android:text="START MONITORING"
+        android:text="@string/START_MONITORING"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,7 +34,7 @@
         android:layout_width="237dp"
         android:layout_height="103dp"
         android:onClick="startBLTScan"
-        android:text="ADD DEVICE"
+        android:text="@string/ADD_DEVICE"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,6 +45,7 @@
         android:id="@+id/imageView3"
         android:layout_width="225dp"
         android:layout_height="249dp"
+        android:contentDescription="@string/image1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.467"
@@ -58,7 +59,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="startRSSILogging"
-        android:text="START Log"
+        android:text="@string/START_LOG"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.949"
