--- a/app/src/main/res/layout/activity_calibration.xml
+++ b/app/src/main/res/layout/activity_calibration.xml
@@ -3,20 +3,34 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Add_devices_Activity">
+    android:layout_height="match_parent"><![CDATA[
+    tools:context=".Calibration_Activity">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="245dp"
-        android:layout_height="35dp"
-        android:layout_marginBottom="24dp"
-        android:text="@string/RECOGNIZED_DEVICES"
-        app:layout_constraintBottom_toTopOf="@+id/BLTFriends"
+
+
+
+
+
+
+
+
+
+
+
+    ]]>
+
+    <Button
+        android:id="@+id/calibrationButton"
+        android:layout_width="237dp"
+        android:layout_height="103dp"
+        android:onClick="startCalibration"
+        android:text="@string/START_CALIBRATION"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView4"
+        app:layout_constraintHorizontal_bias="0.431"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.986" />
+        app:layout_constraintVertical_bias="0.549" />
 
     <TableLayout
         android:id="@+id/BLTDevices"
@@ -54,56 +68,30 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.7">
 
-        <TableRow
-            android:background="#0079D6"
-            android:padding="5dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/MATCHED_DEVICES" />
-        </TableRow>
     </TableLayout>
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="47dp"
-        android:layout_height="57dp"
-        android:layout_marginBottom="10dp"
-        android:contentDescription="@string/image2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.098"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.034"
-        app:srcCompat="@drawable/dicovery_icon" />
 
     <TextView
         android:id="@+id/calibrationInstructionsTextView"
-        android:layout_width="248dp"
-        android:layout_height="66dp"
-        android:text="@string/DISCOVERY_STARTED"
+        android:layout_width="295dp"
+        android:layout_height="85dp"
+        android:text="@string/START_CALIBRATION_INSTRUCTIONS"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.542"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.022" />
-
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="90dp"
-        android:layout_height="68dp"
-        android:layout_marginBottom="8dp"
-        android:contentDescription="@string/image3"
-        app:layout_constraintBottom_toTopOf="@+id/BLTFriends"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.049"
+        app:layout_constraintHorizontal_bias="0.398"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/friends2_icon" />
+        app:layout_constraintVertical_bias="0.239" />
+
+    <TextView
+        android:id="@+id/calibrationTargetDevice"
+        android:layout_width="294dp"
+        android:layout_height="62dp"
+        android:text="No selected device..."
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.401"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.738" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
